--- a/数据结构/红黑树.md
+++ b/数据结构/红黑树.md
@@ -1,3 +1,11 @@
-# 概述
+# 红黑树特征
 
->&nbsp;&nbsp;&nbsp;&nbsp;还要去看平衡二叉树
+```text
+1.节点是红色或者是黑色。
+2.根节点一定是黑色。
+3.每个叶子节点都是黑色的空节点(NIL节点)。
+4.每个红节点的两个子节点都是黑色的。
+5.从任一节点到其每个叶子节点的所有路径都包含相同数目的黑色节点。
+```
+
+![在这里插入图片描述](https://github.com/wuxiaobo000111/pictures/blob/master/2019-03-21/3.png?raw=true)
