--- a/catalog/架构之路.md
+++ b/catalog/架构之路.md
@@ -2,7 +2,7 @@
 # 架构之路
 
 ## 技术相关
-[Redis--防击穿和雪崩.md](https://github.com/wuxiaobo000111/Java--apollo/blob/master/%E6%9E%B6%E6%9E%84%E4%B9%8B%E8%B7%AF/%E6%8A%80%E6%9C%AF%E7%9B%B8%E5%85%B3/Redis--%E9%98%B2%E5%87%BB%E7%A9%BF%E5%92%8C%E9%9B%AA%E5%B4%A9.md "Redis--防击穿和雪崩.md") 
+[Redis--防击穿和雪崩](https://github.com/wuxiaobo000111/Java--apollo/blob/master/%E6%9E%B6%E6%9E%84%E4%B9%8B%E8%B7%AF/%E6%8A%80%E6%9C%AF%E7%9B%B8%E5%85%B3/Redis--%E9%98%B2%E5%87%BB%E7%A9%BF%E5%92%8C%E9%9B%AA%E5%B4%A9.md "Redis--防击穿和雪崩") 
 
 ## 代码质量管理平台
 
